simple fix for overlapping interface.
and a semi fix for the title bar

--- a/source/musicserver/server/mobile/css/style.css
+++ b/source/musicserver/server/mobile/css/style.css
@@ -35,6 +35,7 @@ html, body {
     font-size: 18px;
     font-weight: normal;
     text-shadow: none;
+	margin: 0 50px
 }
 
 #album-list {
@@ -65,6 +66,7 @@ html, body {
 
 /*CONTENT SECTION BEGIN*/
 .ui-content {
+	margin-bottom: 65px;
 	padding: 0 !important;
 }
 
